--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = INFO, D
+log4j.rootLogger = INFO, D, MAIL
 
 
 log4j.appender.C=org.apache.log4j.ConsoleAppender
@@ -22,3 +22,16 @@ log4j.appender.W.Threshold = WARN
 log4j.appender.W.layout = org.apache.log4j.PatternLayout
 log4j.appender.W.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%t] %-5p [%c] - %m%n
 log4j.appender.W.encoding=UTF-8
+
+
+log4j.appender.MAIL=org.apache.log4j.net.SMTPAppender
+log4j.appender.MAIL.Threshold=ERROR
+log4j.appender.MAIL.BufferSize=512
+log4j.appender.MAIL.SMTPHost=smtp.exmail.qq.com
+log4j.appender.MAIL.Subject=Exception [${hostname}] [thriftnameserver]
+log4j.appender.MAIL.SMTPUsername=support@700bike.com
+log4j.appender.MAIL.SMTPPassword=1qaz2wsx#EDC
+log4j.appender.MAIL.From=support@700bike.com
+log4j.appender.MAIL.To=zhangzhen@700bike.com
+log4j.appender.MAIL.layout=org.apache.log4j.PatternLayout
+log4j.appender.MAIL.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
