--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 		<profile>
 			<id>example</id>
 			<modules>
+				<module>protocol</module>
 				<module>example</module>
 				<module>client</module>
 			</modules>
