--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.jerrysearch</groupId>
@@ -101,12 +102,16 @@
 		</profile>
 		<profile>
 			<id>all</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<modules>
 				<module>server</module>
 				<module>client</module>
 				<module>console</module>
 				<module>protocol</module>
 				<module>example</module>
+				<module>feedback</module>
 			</modules>
 		</profile>
 		<profile>
@@ -168,7 +173,4 @@
 			</build>
 		</profile>
 	</profiles>
-  <modules>
-    <module>feedback</module>
-  </modules>
 </project>
