--- a/client/pom.xml
+++ b/client/pom.xml
@@ -13,17 +13,15 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.2</version>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.github.jerrysearch</groupId>
 			<artifactId>tns-protocol</artifactId>
-			<version>3.0.2</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 	</dependencies>
 </project>
